# secure-systems-cpp

./: .gitignore  CMakeLists.txt  README.md  race_demo  race_fixed  test_threadmanager
.github/workflows/: ci.yml
include/: ThreadManager.hpp
include/bank/: Bank.hpp  Ledger.hpp  Types.hpp
src/: ThreadManager.cpp  main.cpp
src/bank/: Bank.cpp  Ledger.cpp
tests/: race_condition_demo.cpp  race_condition_fixed.cpp  test_threadmanager.cpp
tests/bank/: test_bank.cpp  test_ledger.cpp
